# abs-metatheory

./: .gitignore  LICENSE  Makefile.coq.local  README.md  _CoqProject  coq-abs-metatheory.opam  dune-project  meta.yml
.github/workflows/: deploy-docs.yml  docker-action.yml
doc/report/: abs_defs.tex  main.mng
docs/coqdoc/: ABS.abs_defs.html  ABS.abs_examples.html  ABS.abs_functional_metatheory.html  ABS.abs_imp.html  ABS.abs_imperative_metatheory.html  ABS.abs_util.html  ABS.list_util.html  ABS.utils.html  indexpage.html  toc.html
docs/report/: abs_defs.tex  easychair.cls  main.mng
resources/: index.html  index.md
src/: abs.ott
theories/: abs_defs.v  abs_examples.v  abs_functional_metatheory.v  abs_imp.v  abs_imperative_metatheory.v  abs_relations.v  abs_util.v  abstract_confluence.v  dune  list_util.v  simple_confluence.v  utils.v
